# speedtest-bin

./: Cargo.toml
src/: main.rs
