[package]
edition = "2021"
name = "speedtest-bin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
env_logger = { version = "0.9.0", default_features = false, features = ["atty"] }
httparse = "1.6.0"
log = "0.4.16"
num_cpus = "1.13.1"
rand = { version = "0.8.5", features = ["std", "small_rng"] }
tokio = { version = "1.17.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
